--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chalk": "^4.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.4.1",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0"
   }
